--- a/style.css
+++ b/style.css
@@ -1,42 +1,69 @@
 body {
-    background-color: #fff3e6;
-    font-family: Arial, sans-serif;
+    margin: 0;
+    background-color: #f8f8f8;
+    color: #212427
 }
 
-.caixa.pai {
-    width: 300px;
-    height: 300px;
-    background-color: #fdeedc;
-    position: relative;
-    border: 1px solid black;
+h1 {
+    width: fit-content;
+    margin: auto;
 }
 
-.caixa.filho {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
+.caixa {
+    border-radius: 5px;
+}
+
+.pai {
+    width: 80%;
+    height: 350px;
+    margin: auto;
+    background-color: antiquewhite;
+    border: solid 2px #212427;
+
     display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
-    color: black;
-    position: absolute;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: row;
+}
+
+.filho {
+    width: 80px;
+    height: 80px;
+    border-radius: 50px;
+    text-align: center;
 }
 
 .cor1 {
-    background-color: #e40050;
-    top: 10px;
-    left: 10px;
+    background-color: #ED145B;
+    order: 1;
 }
 
 .cor2 {
-    background-color: #5ab4c4;
-    bottom: 10px;
-    left: 150px;
+    background-color: #63B1BC;
+    order: 3;
+    align-self: self-end
 }
 
 .cor3 {
-    background-color: #ecac4d;
-    top: 100px;
-    left: 100px;
+    background-color: #EFB661;
+    order: 2;
+    align-self: center;
+}
+
+.instrucoes {
+    width: 80%;
+    margin: auto;
+    text-align: left;
+}
+
+.footer {
+    background-color: antiquewhite;
+    height: 130px;
+    margin-top: 50px;
+    padding-top: 20px;
+    text-align: center;
+}
+
+img {
+    width: 20%;
 }
